# docs/api/openapi-v1.json
@@ -2839,6 +2839,10 @@
       },
       "ScorePartOut": {
         "properties": {
+          "out_of": {
+            "title": "Out Of",
+            "type": "integer"
+          },
           "part": {
             "title": "Part",
             "type": "string"
@@ -2855,7 +2859,8 @@
         "required": [
           "part",
           "says",
-          "points"
+          "points",
+          "out_of"
         ],
         "title": "ScorePartOut",
         "type": "object"
